// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|Field align 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c6 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c7 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c7 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c7 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c4 {
  position: relative;
}

.c4 .c8 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <div
      className="c4"
    >
      <input
        className="c5"
        id="username"
        onChange={[Function]}
        placeholder="Please type username"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Field default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c4 {
  position: relative;
}

.c4 .c6 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <div
      className="c4"
    >
      <input
        className="c5"
        id="username"
        onChange={[Function]}
        placeholder="Please type username"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Field horizontal 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c6 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c1:not(:last-child) {
  margin-bottom: 1.25em;
}

.c1 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c1 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c1 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c4 {
  position: relative;
}

.c4 .c7 {
  pointer-events: none;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      htmlFor="username"
    >
      Username
    </label>
    <div
      className="c4"
    >
      <input
        className="c5"
        id="username"
        onChange={[Function]}
        placeholder="Please type username"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|Field multiple 1`] = `
.c0 {
  padding: 12px;
}

.c17 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  left: 10px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  height: 100%;
  top: 0;
  font-size: 20px;
  right: 10px;
}

.c10 {
  position: relative;
}

.c15 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c23 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c31 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c32 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c33 .c14 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c34 .c14 {
  font-size: 1.5em;
}

.c35 .c14 {
  font-size: 1.5em;
}

.c36 .c14 {
  font-size: 1.5em;
}

.c37 .c14 {
  font-size: 1.5em;
}

.c38 .c14 {
  font-size: 1.5em;
}

.c39 .c14 {
  font-size: 1.5em;
}

.c40 .c14 {
  font-size: 1.5em;
}

.c41 .c14 {
  font-size: 1.5em;
}

.c42 .c14 {
  font-size: 1.5em;
}

.c43 .c14 {
  font-size: 1.5em;
}

.c44 .c14 {
  font-size: 1.5em;
}

.c45 .c14 {
  font-size: 1.5em;
}

.c46 .c14 {
  font-size: 1.5em;
}

.c47 .c14 {
  font-size: 1.5em;
}

.c48 .c14 {
  font-size: 1.5em;
}

.c49 .c14 {
  font-size: 1.5em;
}

.c50 .c14 {
  font-size: 1.5em;
}

.c51 .c14 {
  font-size: 1.5em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c4 > .c3 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c22 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c22 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c22 + label:focus {
  outline: 0;
}

.c22 + label:empty {
  padding: 0 0 0 1em;
}

.c22 + label::before,
.c22 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c22 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c22 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c22 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c22:focus + label::before,
.c22 + label:hover::before {
  background-color: #999;
}

.c22:checked + label {
  color: #222;
}

.c22:checked + label::before {
  background-color: #222;
}

.c22:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c9 {
  display: block;
}

.c8 {
  position: relative;
  width: 100%;
}

.c16 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c1 {
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c2:not(:last-child) {
  margin-bottom: 1.25em;
}

.c2 > .c3:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c2 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c52 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c52 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c52 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c53 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c53 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c53 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: unset;
}

.c7:not(:last-child) {
  margin-bottom: 1.25em;
}

.c7 > .c3:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 30em;
  -ms-flex-preferred-size: 30em;
  flex-basis: 30em;
}

.c7 > .c3:first-child > .c3 {
  padding-bottom: unset;
}

.c7 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 > *:not(.c3):not(:last-child) {
  margin-bottom: 1.25em;
}

.c54 .c14 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  position: relative;
}

.c5 .c14 {
  pointer-events: none;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  color: #999;
}

.c20 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c11[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c18 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="username"
      >
        Username
      </label>
      <div
        className="c5"
      >
        <input
          className="c6"
          id="username"
          onChange={[Function]}
          placeholder="Please type username"
          type="text"
        />
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="email"
      >
        Email address
        <label
          className="c3 c4"
        >
          We will never sell your email address and we will never spam you!
        </label>
      </label>
      <div
        className="c5"
      >
        <input
          className="c6"
          id="email"
          onChange={[Function]}
          placeholder="Please type email address"
          type="text"
        />
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="name"
      >
        Receive newsletter
      </label>
      <div
        className="c5"
      >
        <input
          className="c6"
          id="name"
          onChange={[Function]}
          placeholder="Please type full name"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c7"
    >
      <label
        className="c3 c4"
        htmlFor="username2"
      >
        Username
      </label>
      <div
        className="c5"
      >
        <input
          className="c6"
          id="username2"
          onChange={[Function]}
          placeholder="Please type username"
          type="text"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <label
        className="c3 c4"
        htmlFor="email2"
      >
        Email address
        <label
          className="c3 c4"
        >
          We will never sell your email address and we will never spam you, that's a promise you can rely on. All other promises you need to catch.
        </label>
      </label>
      <div
        className="c5"
      >
        <input
          className="c6"
          id="email2"
          onChange={[Function]}
          placeholder="Please type email address"
          type="text"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <label
        className="c3 c4"
      >
        Select a value
      </label>
      <div
        className="c8"
        data-test="dropdown"
      >
        <div
          className="c9"
        >
          <div
            className="c10"
            data-test="adornment-wrapper"
          >
            <div
              className="c5"
              onClick={[Function]}
            >
              <input
                className="c11 c6"
                disabled={true}
                onChange={[Function]}
                placeholder="Select with SelectList"
                style={
                  Object {
                    "paddingLeft": 0,
                    "paddingRight": 0,
                  }
                }
                type="text"
              />
            </div>
            <span
              className="c12"
              data-test="left-adornment"
            />
            <span
              className="c13"
              data-test="right-adornment"
            >
              <span
                className="c14 c15"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            className="c16"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className="c17"
            >
              <div
                onKeyDown={[Function]}
              >
                <div
                  className="c18"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 30,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <ul
                    style={
                      Object {
                        "height": 30,
                        "pointerEvents": "",
                        "width": "100%",
                      }
                    }
                  >
                    <li
                      className="c19"
                      data-test="list-item"
                      onClick={[Function]}
                      onMouseOver={[Function]}
                      style={
                        Object {
                          "height": 30,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                      tabIndex={-1}
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c21"
                        >
                          No items in this list...
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c7"
    >
      <label
        className="c3 c4"
      >
        Privacy consent
      </label>
      <span>
        <input
          checked={true}
          className="c22"
          id="4"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="c3 c4"
          htmlFor="4"
        >
          I want cookies
        </label>
      </span>
    </div>
  </div>
</div>
`;
